--- a/src/main/webapp/WEB-INF/templates/template_defaut.xhtml
+++ b/src/main/webapp/WEB-INF/templates/template_defaut.xhtml
@@ -14,7 +14,9 @@
 
     <h:body>
         <div id="top" class="top">
-            <ui:insert name="top">Top</ui:insert>
+            <ui:insert name="top">
+                TP PRG - #{titre}
+            </ui:insert>
         </div>
         <div>
             <div id="left">
